update db fields for primary album artist, new rescan logic